Cambio de nombre

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mews/phpthumb",
+    "name": "mews/Phpthumb-Laravel",
     "description": "PHPThumb Package for Laravel 4",
     "keywords": ["L4", "Laravel 4", "Laravel", "PHPThumb", "image", "thumb", "Thumbnail"],
     "homepage": "http://github.com/mewebstudio/Phpthumb",
